# IPACO

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cp_lib.txt  deep_run.sh  eh.txt  output.txt  run.sh
deep_cp/: CMakeLists.txt  Makefile  cmake_install.cmake  cp_lib.cpp
my_alias/: CMakeLists.txt  Makefile  alias_lib.cpp  cmake_install.cmake
my_cp/: CMakeLists.txt  Makefile  abhay.cpp  cmake_install.cmake  cp_lib.cpp
